--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ p {
   background-color: var(--primary-color);
   cursor: pointer;
   border-radius: 5px;
+  border: 0;
   font-size: 12px;
   padding: 5px 12px;
 }
